vlib/v/checker/tests/uncasted_enum_val_as_size_for_fixed_array_err.out
vlib/v/checker/tests/uncasted_enum_val_as_size_for_fixed_array_err.vv:10:7: error: Foo.first has to be casted to integer to be used as size
    8 | }
    9 | 
   10 | a := [b]int{}
      |       ^
   11 | println(a)
   12 |
vlib/v/checker/tests/uncasted_enum_val_as_size_for_fixed_array_err.vv:13:7: error: Foo.second has to be casted to integer to be used as size
   11 | println(a)
   12 | 
   13 | c := [Foo.second]int{}
      |       ~~~~~~~~~~
   14 | println(c)
vlib/v/checker/tests/uncasted_enum_val_as_size_for_fixed_array_err.vv:13:7: error: fixed size cannot be zero or negative (fixed_size: 0)
   11 | println(a)
   12 | 
   13 | c := [Foo.second]int{}
      |       ~~~~~~~~~~
   14 | println(c)
