vlib/v/checker/tests/uncasted_enum_val_as_size_for_fixed_array_err.vv
const b = Foo.first

enum Foo {
	first = 5
	second

	_end = 9
}

a := [b]int{}
println(a)

c := [Foo.second]int{}
println(c)
